@@ -39,6 +39,7 @@ import com.devonfw.tools.ide.tool.node.Node;
 import com.devonfw.tools.ide.tool.npm.Npm;
 import com.devonfw.tools.ide.tool.oc.Oc;
 import com.devonfw.tools.ide.tool.pgadmin.PgAdmin;
+import com.devonfw.tools.ide.tool.pip.Pip;
 import com.devonfw.tools.ide.tool.python.Python;
 import com.devonfw.tools.ide.tool.quarkus.Quarkus;
 import com.devonfw.tools.ide.tool.sonar.Sonar;
@@ -126,6 +127,7 @@ public class CommandletManagerImpl implements CommandletManager {
     add(new PgAdmin(context));
     add(new LazyDocker(context));
     add(new Python(context));
+    add(new Pip(context));
   }
 
   /**
