@@ -78,6 +78,8 @@ cmd.oc=Werkzeug Kommando für Openshift CLI (Kubernetes Management Tool).
 cmd.oc.detail=OpenShift CLI (oc) ist ein Befehlszeilentool zur Verwaltung von OpenShift-Clustern. Detaillierte Dokumentation ist zu finden unter https://docs.openshift.com/
 cmd.pgadmin=Werkzeug Kommando für pgAdmin.
 cmd.pgadmin.detail=pgAdmin ist ein Open-Source-Verwaltungswerkzeug for PostgreSQL und verwandte relationale Datenbanken. Detaillierte Dokumentation ist zu finden unter https://www.pgadmin.org/docs/pgadmin4/latest/index.html
+cmd.pip=Werkzeug Kommando für pip.
+cmd.pip.detail=pip wird zur Verwaltung von Paketen für Python verwendet. Detaillierte Dokumentation ist zu finden unter https://pip.pypa.io/en/stable/
 cmd.python=Werkzeug Kommando für Python.
 cmd.python.detail=Python ist eine objektorientierte Programmiersprache, vergleichbar mit Perl, Ruby, Scheme oder Java. Detaillierte Dokumentation ist zu finden unter https://www.python.org/doc/
 cmd.quarkus=Werkzeug Kommando für Quarkus (Framework für Cloud-native Anwendungen).
